# Chips-portal

./: .env  .env.example  MEMBER_INSTRUCTIONS.txt  PROJECT_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  seed.py
app/: __init__.py  config.py  database.py  models.py
app/blueprints/: approvals.py  dc_requests.py  lms.py  noc.py  reactivation.py  station.py
app/static/css/: chips_dashboard.css  common.css  dc_dashboard.css  dc_requests.css  layout.css  station.css  style.css
app/static/css/chips/: approvals.css  chips_dash.css  chips_lms.css  chips_noc.css
app/static/css/dc/: dc_dash.css  dc_lms.css  noc.css  reactivation.css
app/templates/: base.html
app/templates/approvals/: approvals_view.html
app/templates/auth/: login.html
app/templates/chips/: chips_dash.html  chips_lms.html  chips_noc.html
app/templates/dc/: dc_dash.html  lms.html  noc.html  reactivation.html
app/templates/dc_requests/: dc_requests_view.html
app/templates/partials/: header.html  sidebar.html
app/templates/station/: station_view.html
backend/: database.py  main.py  model.py  models.py
backend/models/: __init__.py  approvals.py  base.py  dc_requests.py  lms.py  noc.py  reactivation.py  station.py
backend/routers/: approvals.py  auth.py  dc_requests.py  lms.py  noc.py  reactivation.py  station.py
backend/utils/: email_verifier.py
migrations/versions/: 3abd22e6a4a3_initialize_core_chips_and_dc_schemas.py
storage/reactivation_docs/1/: attendance_list_dummy1.xlsx
