[project]
name = "chips-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.1.3",
    "celery==5.4.0",
    "fastapi>=0.136.3",
    "flask==3.1.3",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "openpyxl==3.1.5",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv==1.0.1",
    "redis==5.0.4",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
]
