[project]
name = "chips-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.1.3",
    "celery==5.4.0",
    "fastapi>=0.136.3",
    "flask==3.1.3",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "openpyxl==3.1.5",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.10", # Changed to -binary to prevent native C compilation errors on Windows
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4", # 🔌 Added [email] extra here
    "python-dotenv==1.0.1",
    "redis==5.0.4",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
    "python-jose[cryptography]>=3.4.0", # Added: Required for Member 2's backend JWT Generation
    "passlib[bcrypt]>=1.7.4",           # Added: Required for Member 2's secure password matching
    "python-multipart>=0.0.9",          # Added: Required for FastAPI OAuth2 Form logins
]
